force-app/main/default/objects/AppLog__c/AppLog__c.object-meta.xml
<CustomObject>
    <label>AppLog</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>AppLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>