force-app/main/default/objects/AppLog__c/fields/Duration_in_second__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_second__c</fullName>
    <label>Duration (in second)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>