force-app/main/default/objects/AppLog__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>