force-app/main/default/objects/AppLog__c/fields/EndLongTime__c.field-meta.xml
<CustomField>
    <fullName>EndLongTime__c</fullName>
    <label>EndLongTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>