force-app/main/default/objects/AppLog__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>