force-app/main/default/objects/AppLog__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>Contact SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>