force-app/main/default/objects/AppLog__c/fields/Log_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Log_Call_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>AppLogs</relationshipLabel>
    <relationshipName>AppLogs</relationshipName>
    <type>Lookup</type>
</CustomField>