force-app/main/default/objects/AppLog__c/fields/Log_Case__c.field-meta.xml
<CustomField>
    <fullName>Log_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AppLogs</relationshipLabel>
    <relationshipName>AppLogs</relationshipName>
    <type>Lookup</type>
</CustomField>