force-app/main/default/objects/AppLog__c/fields/Policy_App__c.field-meta.xml
<CustomField>
    <fullName>Policy_App__c</fullName>
    <label>Policy App</label>
    <length>25</length>
    <type>Text</type>
</CustomField>