force-app/main/default/objects/AppLog__c/fields/Reason_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_Status__c</fullName>
    <label>Reason Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>