force-app/main/default/objects/AppLog__c/fields/Request_Value__c.field-meta.xml
<CustomField>
    <fullName>Request_Value__c</fullName>
    <label>Request Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>