force-app/main/default/objects/AppLog__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <label>start date</label>
    <type>DateTime</type>
</CustomField>