force-app/main/default/objects/AppLog__c/fields/StartLongTime__c.field-meta.xml
<CustomField>
    <fullName>StartLongTime__c</fullName>
    <label>StartLongTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>