force-app/main/default/objects/AppLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>id__c</columns>
    <columns>Policy_No__c</columns>
    <columns>Method__c</columns>
    <columns>Policy_App__c</columns>
    <columns>Entity__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Duration_in_second__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>